feat: Add remaining shared packages (utils, services, hooks) and configure portal-web
- Created shared-utils with validation and formatters
- Created shared-services with ApiClient and IAuthService
- Created shared-hooks with useLogin
- Updated portal-web to include all shared packages
- Updated vite.config.ts with all package aliases
- All packages build successfully
- Portal-web builds successfully with shared packages

--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@protocolsync/shared-types": "*",
     "@protocolsync/shared-constants": "*",
+    "@protocolsync/shared-utils": "*",
+    "@protocolsync/shared-services": "*",
+    "@protocolsync/shared-hooks": "*",
     "serve": "^14.2.1",
     "@azure/msal-browser": "^4.26.2",
     "@azure/msal-react": "^3.0.22",
