--- a/apps/portal-mobile/package.json
+++ b/apps/portal-mobile/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@protocolsync/shared-types": "*",
     "@protocolsync/shared-constants": "*",
-    "@protocolsync/shared-utils": "*",
-    "@protocolsync/shared-services": "*",
     "@protocolsync/shared-hooks": "*",
+    "@protocolsync/shared-services": "*",
+    "@protocolsync/shared-types": "*",
+    "@protocolsync/shared-utils": "*",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.6",
@@ -34,7 +34,8 @@
     "react-native-reanimated": "~3.16.4",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
