--- a/apps/portal-mobile/package.json
+++ b/apps/portal-mobile/package.json
@@ -25,6 +25,7 @@
     "expo-file-system": "~18.0.4",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-native": "0.81.5",
