Android app now goes to the login screen

--- a/apps/portal-mobile/app.json
+++ b/apps/portal-mobile/app.json
@@ -4,7 +4,7 @@
     "slug": "portal-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/adaptive-icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -13,9 +13,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.protocolsync.portalmobile"
     },
     "android": {
+      "package": "com.protocolsync.portalmobile",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -23,6 +25,10 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
+    "plugins": [
+      "./plugins/withGradleFixes",
+      "./plugins/withMsalActivity"
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
