--- a/apps/portal-mobile/package.json
+++ b/apps/portal-mobile/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@protocolsync/portal-mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,33 +14,30 @@
     "@protocolsync/shared-services": "*",
     "@protocolsync/shared-types": "*",
     "@protocolsync/shared-utils": "*",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.2",
-    "expo-document-picker": "~12.0.2",
-    "expo-file-system": "~18.0.4",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-msal": "^4.0.4",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.4",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0"
   },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
-  },
+  "devDependencies": {},
   "private": true
 }
