--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dev:mobile": "cd apps/portal-mobile && npm start",
     "build:web": "turbo run build --filter=protocolsync-portal",
     "clean": "turbo run clean && rm -rf node_modules",
-    "typecheck": "turbo run typecheck"
+    "typecheck": "turbo run typecheck",
+    "android": "npm run android -w @protocolsync/portal-mobile",
+    "ios": "npm run ios -w @protocolsync/portal-mobile"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
@@ -25,5 +27,10 @@
     "node": ">=18.0.0",
     "npm": ">=7.0.0"
   },
-  "packageManager": "npm@11.6.2"
+  "packageManager": "npm@11.6.2",
+  "dependencies": {
+    "expo": "~54.0.31",
+    "react": "19.1.0",
+    "react-native": "0.81.5"
+  }
 }
