--- a/apps/portal-mobile/package.json
+++ b/apps/portal-mobile/package.json
@@ -16,10 +16,11 @@
     "@protocolsync/shared-utils": "*",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/drawer": "^7.7.11",
+    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/stack": "^7.6.14",
     "expo": "~54.0.31",
+    "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.2",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
@@ -36,8 +37,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets-core": "^1.6.2"
   },
-  "devDependencies": {},
   "private": true
 }
