--- a/.github/workflows/main_protocolsync-portal-prod-bkfovjzn35ddq.yml
+++ b/.github/workflows/main_protocolsync-portal-prod-bkfovjzn35ddq.yml
@@ -1,19 +1,25 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - protocolsync-portal-prod-bkfovjzn35ddq
+name: Prod Deploy - protocolsync-portal-prod-bkfovjzn35ddq
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'apps/portal-web/**'
+      - 'packages/**'
+      - 'package.json'
+      - 'turbo.json'
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -22,26 +28,46 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+          cache: 'npm'
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: .
+      - name: Debug - Check environment variables
+        env:
+          VITE_API_URL: ${{ secrets.VITE_PROD_API_URL }}
+          VITE_API_KEY: ${{ secrets.VITE_PROD_API_KEY }}
+        run: |
+          echo "VITE_API_URL is set: $(if [ -n \"$VITE_API_URL\" ]; then echo YES; else echo NO; fi)"
+          echo "VITE_API_KEY is set: $(if [ -n \"$VITE_API_KEY\" ]; then echo YES; else echo NO; fi)"
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      - name: Install dependencies and build
+        env:
+          VITE_API_URL: ${{ secrets.VITE_PROD_API_URL }}
+          VITE_API_KEY: ${{ secrets.VITE_PROD_API_KEY }}
+          VITE_WEBSITE_URL: ${{ secrets.VITE_WEBSITE_URL }}
+          VITE_AZURE_CLIENT_ID: ${{ secrets.VITE_AZURE_CLIENT_ID }}
+          VITE_AZURE_TENANT_ID: ${{ secrets.VITE_AZURE_TENANT_ID }}
+        run: |
+          echo "Building with VITE_API_URL starting with: ${VITE_API_URL:0:30}..."
+          npm install
+          npm run build:web
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-      
+      - name: Create static server package
+        run: |
+          cd apps/portal-web/dist
+          # Create package.json for serving static files
+          cat > package.json << 'EOF'
+          {
+            "name": "protocolsync-portal",
+            "version": "1.0.0",
+            "scripts": {
+              "start": "npx serve -s . -l $PORT"
+            },
+            "dependencies": {
+              "serve": "^14.2.1"
+            }
+          }
+          EOF
+          npm install --production
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -49,11 +75,31 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_88D44813B7894189931E258552FE8881 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_875C70D44EBB44278D0375F52DFBD85E }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'protocolsync-portal-prod-bkfovjzn35ddq'
-          slot-name: 'Production'
-          package: .
-          
+      - name: Disable build during deployment
+        run: |
+          az webapp config appsettings set \
+            --resource-group protocolsync-rg-prod \
+            --name protocolsync-portal-prod-bkfovjzn35ddq \
+            --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false
+          az webapp restart \
+            --resource-group protocolsync-rg-prod \
+            --name protocolsync-portal-prod-bkfovjzn35ddq
+
+      - name: Set Azure App Service startup command (prod)
+        run: |
+          az webapp config set \
+            --resource-group protocolsync-rg-prod \
+            --name protocolsync-portal-prod-bkfovjzn35ddq \
+            --startup-file 'npm start'
+
+      - name: Deploy to Azure Web App
+        run: |
+          cd apps/portal-web/dist
+          zip -r ../deploy.zip .
+          cd ..
+          az webapp deploy --resource-group protocolsync-rg-prod \
+            --name protocolsync-portal-prod-bkfovjzn35ddq \
+            --src-path deploy.zip \
+            --type zip \
+            --clean true \
+            --restart false
