--- a/.github/workflows/main_protocolsync-portal-prod-bkfovjzn35ddq.yml
+++ b/.github/workflows/main_protocolsync-portal-prod-bkfovjzn35ddq.yml
@@ -23,6 +23,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
